--- a/app/views/Register.scala.html
+++ b/app/views/Register.scala.html
@@ -1,70 +1,84 @@
-@main("Register") {
+<!DOCTYPE html>
 
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-                <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="/index">Register</a>
-            </div>
+<html>
+    <head>
+        <title>Register</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/login.css")">
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js"></script>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    </head>
+    <body>
 
-                <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="hidden active">
-                        <a href = "#page-top"></a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href = "/index">Index</a>
-                    </li>
-                    <li class = "page-scroll">
-                        <a href = "/result">Voting Result</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href = "/logout">Log Out</a>
-                    </li>
-                </ul>
-            </div>
-                <!-- /.navbar-collapse -->
-        </div>
-<<<<<<< HEAD
-            <!-- /.container-fluid -->
-    </nav>
-
-
-    <header>
-
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12" style="text-decoration-color: slategrey">
-                    <form action = "/regis" method = post>
-                        <div class="form-group">
-                            <label for="Username">Username</label>
-                            <input class="form-control" id="Username" name="username" placeholder="Enter Username" >
-                        </div>
-                        <div class="form-group">
-                            <label for="Password1">Password</label>
-                            <input type="Password" class="form-control" id="Password" name="password" placeholder="Password">
-                        </div>
-                        <div class="form-group">
-                            <select class="form-control" id="type" name="type">
-                                <option  id="type" name="type">Admin</option>
-                                <option  id="type" name="type">Voter</option>
-                            </select>
-                        </div>
-                        @*gity *@
-                        <button id="submit" type="submit" class="btn btn-primary btn-block center-block">Submit</button>
-                    </form>
+        <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header page-scroll">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="/index">Register</a>
                 </div>
+
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="hidden active">
+                            <a href = "#page-top"></a>
+                        </li>
+                        <li class="page-scroll">
+                            <a href = "/index">Index</a>
+                        </li>
+                        <li class = "page-scroll">
+                            <a href = "/result">Voting Result</a>
+                        </li>
+                        <li class="page-scroll">
+                            <a href = "/logout">Log Out</a>
+                        </li>
+                    </ul>
+                </div>
+                    <!-- /.navbar-collapse -->
+            </div>
+                <!-- /.container-fluid -->
+        </nav>
+
+
+        <header>
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12" style="text-decoration-color: slategrey">
+                        <form action = "/regis" method = post>
+                            <div class="form-group">
+                                <label for="Username">Username</label>
+                                <input class="form-control" id="Username" name="username" placeholder="Enter Username" >
+                            </div>
+                            <div class="form-group">
+                                <label for="Password1">Password</label>
+                                <input type="Password" class="form-control" id="Password" name="password" placeholder="Password">
+                            </div>
+                            <div class="form-group">
+                                <select class="form-control" id="type" name="type">
+                                    <option  id="type" name="type">Admin</option>
+                                    <option  id="type" name="type">Voter</option>
+                                </select>
+                            </div>
+                            @*gity *@
+                            <button id="submit" type="submit" class="btn btn-primary btn-block center-block">Submit</button>
+                        </form>
+                    </div>
+                </div>
+
             </div>
 
-        </div>
-
-    </header>
-
-}
+        </header>
+    </body>
+</html>
