--- a/app/views/addproject.scala.html
+++ b/app/views/addproject.scala.html
@@ -1,91 +1,101 @@
 @(message: String)
 
-@mainAddProj("Add project") {
+<!DOCTYPE html>
 
-    <!--@play20.welcome(message, style = "Java")-->
+<html>
+    <head>
+        <title>Add Project</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/addProj.css")">
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js"></script>
+        <script src="@routes.Assets.at("javascripts/project.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/addProj.js")" type="text/javascript"></script>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    </head>
+    <body>
+        <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header page-scroll">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="/index">@message</a>
+                </div>
 
-    <!--<div ui-content-for="title">
-        <span>Forms</span>
-    </div>-->
-
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-                <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="/index">@message</a>
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="hidden active">
+                            <a href = "#page-top"></a>
+                        </li>
+                        <li class="page-scroll">
+                            <a href = "/index">Index</a>
+                        </li>
+                        <li class = "page-scroll">
+                            <a href = "/result">Voting Result</a>
+                        </li>
+                        <li class="page-scroll">
+                            <a href = "/logout">Log Out</a>
+                        </li>
+                    </ul>
+                </div>
+                    <!-- /.navbar-collapse -->
             </div>
+                <!-- /.container-fluid -->
+        </nav>
 
-                <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="hidden active">
-                        <a href = "#page-top"></a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href = "/index">Index</a>
-                    </li>
-                    <li class = "page-scroll">
-                        <a href = "/result">Voting Result</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href = "/logout">Log Out</a>
-                    </li>
-                </ul>
-            </div>
-                <!-- /.navbar-collapse -->
-        </div>
-            <!-- /.container-fluid -->
-    </nav>
+        <header>
 
-    <header>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12" style="text-decoration-color: slategrey">
+                        <form id="project" class="text-center" role="form" action = "/addproject" method = post>
+                            @*name: <input type="text" name="name"><br>*@
+                            @*image url: <input type="text" name="imageurl"><br>*@
+                            @*description: <input type="text" name="description"><br>*@
+                            @*manager: <input type="text" name="manager"><br>*@
 
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12" style="text-decoration-color: slategrey">
-                    <form id="project" class="text-center" role="form" action = "/addproject" method = post>
-                        @*name: <input type="text" name="name"><br>*@
-                        @*image url: <input type="text" name="imageurl"><br>*@
-                        @*description: <input type="text" name="description"><br>*@
-                        @*manager: <input type="text" name="manager"><br>*@
-
-                                <!-- add image -->
-                            <div id="dropzone">
-                                <div>drop image</div>
-                                @*<input type="text" name="imageurl"><br>*@
-                                <input type="file" name="imageurl" accept="image/png" />
-                            </div>
+                            <!-- add image -->
+                        <div id="dropzone">
+                            <div>drop image</div>
+                            @*<input type="text" name="imageurl"><br>*@
+                            <input type="file" name="imageurl" accept="image/png" />
+                        </div>
                             * only .png file
 
-                            <br><br>
+                        <br><br>
 
-                                <!-- add text -->
-                            <div class="wrap">
-                                <div class="mat-div">
-                                    <label for="name" class="mat-label">Name</label>
-                                    <input type="text" class="mat-input" name="name">
-                                </div>
-
-                                <div class="mat-div">
-                                    <label for="description" class="mat-label">Project Description</label>
-                                    <input type="text" class="mat-input" name="description">
-                                </div>
-
-                                <div class="mat-div">
-                                    <label for="maneger" class="mat-label">Project Manager</label>
-                                    <input type="text" class="mat-input" name="manager">
-                                </div>
-                                <button id="submit" type="submit" class="btn btn-primary btn-block center-block">Submit</button>
+                            <!-- add text -->
+                        <div class="wrap">
+                            <div class="mat-div">
+                                <label for="name" class="mat-label">Name</label>
+                                <input type="text" class="mat-input" name="name">
                             </div>
-                    </form>
+
+                            <div class="mat-div">
+                                <label for="description" class="mat-label">Project Description</label>
+                                <input type="text" class="mat-input" name="description">
+                            </div>
+
+                            <div class="mat-div">
+                                <label for="maneger" class="mat-label">Project Manager</label>
+                                <input type="text" class="mat-input" name="manager">
+                            </div>
+                            <button id="submit" type="submit" class="btn btn-primary btn-block center-block">Submit</button>
+                        </div>
+                        </form>
+                    </div>
                 </div>
             </div>
-        </div>
-
-    </header>
-}
+        </header>
+    </body>
+</html>
