--- a/app/views/complete.scala.html
+++ b/app/views/complete.scala.html
@@ -1,20 +1,36 @@
 @(votes: List[result.resultVote])
 @import result.Account
-@main("Vote result") {
-    <div class="text-center">
-        @votes.map { vote =>
-            id = @vote.getname <br>
-            @vote.getScore <br>
-            @vote.getScore2 <br>
-            @vote.getScore3 <br>
-            @*@defining(Account.find.byId(vote.voterID)) { account =>*@
-                @*Voter = @account.username <br>*@
-            @*}*@
-            @*projectID = @vote.projectID <br>*@
-        <br>
-        }
-    </div>
-    <div id="browse_app" class="text-center">
-        <a class="btn btn-large btn-info" href="/index">Browse to index page (Test)</a>
-    </div>
-}
+<!DOCTYPE html>
+
+    <html>
+        <head>
+            <title>Vote result"</title>
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+            <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/login.css")">
+            <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+            <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
+            <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular.min.js"></script>
+            <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js"></script>
+            <meta charset="utf-8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+        </head>
+        <body>
+            <div class="text-center">
+                @votes.map { vote =>
+                    id = @vote.getname <br>
+                    @vote.getScore <br>
+                    @vote.getScore2 <br>
+                    @vote.getScore3 <br>
+                    @*@defining(Account.find.byId(vote.voterID)) { account =>*@
+                        @*Voter = @account.username <br>*@
+                    @*}*@
+                    @*projectID = @vote.projectID <br>*@
+                <br>
+                }
+            </div>
+            <div id="browse_app" class="text-center">
+                <a class="btn btn-large btn-info" href="/index">Browse to index page (Test)</a>
+            </div>
+        </body>
+    </html>
