--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -1,33 +1,47 @@
 @(form: Form[Login])
 
-@mainLogin("Login") {
+<!DOCTYPE html>
 
-    <div class="login-form">
+<html>
+    <head>
+        <title>Login</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/login.css")">
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js"></script>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    </head>
+    <body>
+        <div class="login-form">
 
-        <h1>Login</h1>
+            <h1>Login</h1>
 
-        <form class="form-horizontal" action = "/log" method = POST>
-            @if(form.hasGlobalErrors) {
-                <p class="error">
-                @form.globalError.message
-                </p>
-            }
-            <div class="form-group log-status">
-                <input type="text" class="form-control" placeholder="Username " id="Username" name="username">
-                <i class="fa fa-user"></i>
-                <input type="password" class="form-control" placeholder="Password" id="Password" name="password">
-                <i class="fa fa-lock"></i>
+            <form class="form-horizontal" action = "/log" method = POST>
+                @if(form.hasGlobalErrors) {
+                    <p class="error">
+                    @form.globalError.message
+                    </p>
+                }
+                <div class="form-group log-status">
+                    <input type="text" class="form-control" placeholder="Username " id="Username" name="username">
+                    <i class="fa fa-user"></i>
+                    <input type="password" class="form-control" placeholder="Password" id="Password" name="password">
+                    <i class="fa fa-lock"></i>
+                </div>
+
+            <button type="submit" class="log-btn" >Log in</button>
+
+            </form>
+
+
+            <div class = "regist-btn">
+                <a href="/registor"> <button id="regis" type="regis" class="btn btn-primary btn-block center-block">Register</button></a>
             </div>
 
-        <button type="submit" class="log-btn" >Log in</button>
-
-        </form>
-
-
-        <div class = "regist-btn">
-            <a href="/registor"> <button id="regis" type="regis" class="btn btn-primary btn-block center-block">Register</button></a>
         </div>
-
-    </div>
-
-}
+    </body>
+</html>
