--- a/app/views/projectPage.scala.html
+++ b/app/views/projectPage.scala.html
@@ -1,70 +1,85 @@
 @import result.Project
-
 @(project: Project, message: String)
 
-@mainProj("Team " + project.name) {
-    //header bar
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-                <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="/index">@project.name</a>
-            </div>
+<!DOCTYPE html>
 
-                <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="hidden active">
-                        <a href="#page-top"></a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href= "/index">Index</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href= "/logout">Log Out</a>
-                    </li>
-                </ul>
-            </div>
-                <!-- /.navbar-collapse -->
-        </div>
-            <!-- /.container-fluid -->
-    </nav>
+<html>
+    <head>
+        <title>"Team " + project.name</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/project.css")">
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js"></script>
+        <script src="@routes.Assets.at("javascripts/project.js")" type="text/javascript"></script>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+    </head>
+    <body>
+        //header bar
+        <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header page-scroll">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="/index">@project.name</a>
+                </div>
 
-    <header>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="text-center">@message</div>
-                    <img class="img-responsive" src="@routes.Assets.at("images/submarine.png")" style="width:50%;">
-                    <div class="intro-text">
-                        <span class="name">Team @project.name</span>
-                        <hr class="star-light">
-                        <span class="skills">@project.description</span>
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="hidden active">
+                            <a href="#page-top"></a>
+                        </li>
+                        <li class="page-scroll">
+                            <a href= "/index">Index</a>
+                        </li>
+                        <li class="page-scroll">
+                            <a href= "/logout">Log Out</a>
+                        </li>
+                    </ul>
+                </div>
+                    <!-- /.navbar-collapse -->
+            </div>
+                <!-- /.container-fluid -->
+        </nav>
+
+        <header>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="text-center">@message</div>
+                        <img class="img-responsive" src="@routes.Assets.at("images/submarine.png")" style="width:50%;">
+                        <div class="intro-text">
+                            <span class="name">Team @project.name</span>
+                            <hr class="star-light">
+                            <span class="skills">@project.description</span>
+                        </div>
                     </div>
                 </div>
             </div>
+        </header>
+
+        <div id="browse_app" class="text-center">
+            <a class="btn btn-large btn-info" href="@routes.Application.gotoVotePage( project.id , project.name )">Vote</a>
         </div>
-    </header>
-
-    <div id="browse_app" class="text-center">
-        <a class="btn btn-large btn-info" href="@routes.Application.gotoVotePage( project.id , project.name )">Vote</a>
-    </div>
 
 
 
 
-    <div class="text-center">
-        ID = @project.id <br>
-        name = @project.name <br>
-        description = @project.description <br>
-        imageurl = @project.imageurl <br>
-        manager = @project.manager <br>
-    </div>
-
-}
+        <div class="text-center">
+            ID = @project.id <br>
+            name = @project.name <br>
+            description = @project.description <br>
+            imageurl = @project.imageurl <br>
+            manager = @project.manager <br>
+        </div>
+    </body>
+</html>
